--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@ body{
 }
 header{
   height: 95vh;
-  background-image: url(laptop.jpg);
+  background-image: url(../img/laptop.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
